修复错误